=========================================================================
CHANGE LOG
=========================================================================


Changes up to 0.99rcX

    * fixed 32-bit memory allocation bug

    * fixed selection argument to rotate command

    * fixed mview-based object animation loops

    * mol2 file reading fixes

    * single-molecule mol, mol2, sdf now not discrete by default.

    * parallel geometry builds

    * massive reworking of ramp_new for molecular objects

    * VRML2 support from Chris Want.

    * fixed button in benchmark wizard

Changes up to 0.99


    pre01

    * WARNING: One annoying GOTCHA!  Launch script "./pymol.com" is now
      just plain old "./pymol" -- sorry for the resulting config hassles.

    * Now running Python 2.4 on Windows, Linux, IRIX, and Solaris
      Mac remains at 2.3 in order to match built-in Mac OS X Python

    * fixed GUI bug in pmg/tk & added new alignment option for states.

    beta38

    * fixed field width bug in PDB writer

    beta37

    beta36

    * fetch no longer loads PDB as discrete

    beta35

    * MacPyMOL drag & drop fixes

    beta34

    * "fetch" command

    beta33

    * fixed SS assignment crash bug on Win32

    beta32

    * numerous minor PDB reading, threading, and cartoon glitches
      eliminated during validation phase

    * optimized PDB read performance 

    * ray_legacy_lighting setting to enable blending of previous 
      lighting algorithm with new (more correct) lighting

    * dss state=0 on a multi-state obj now assigns consensus 
      dss state=-x1 on a multi-state obj now assigns union 

    * fixed subtle logic bug in match & merge of highly similar PDB files

    * various fixed to the alignment & matrix handling code 
    
    * non-textured label positioning

    * label_position x,y values <-1 or >1

    * multiple lights now work with multiple processors

    * label position for dashes
